coneccion a la bd y registro funcionando

--- a/galeria.html
+++ b/galeria.html
@@ -164,7 +164,7 @@
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="index.html#cat">Catálogo</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="inicioSesion.html">Inicio de sesion</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="inicioSesion.php">Inicio de sesion</a>
                     </li>
                   </ul>
                   <div class="contacts-classic">
